# onze

./: .gitignore  README.md  pyproject.toml
bots/: example.py
bots/example/: run
src/onze/: box.py  cards.py  game.py  judge.py  linux.py  protocol.py  seats.py
tests/onze/: test_cards.py  test_game.py  test_protocol.py
